--- a/src/angular/datepicker/datepicker-content/datepicker-content.scss
+++ b/src/angular/datepicker/datepicker-content/datepicker-content.scss
@@ -22,7 +22,7 @@
     position: absolute;
     pointer-events: none;
     transform: rotate(-135deg);
-    background-color: var(--sbb-color-background);
+    background-color: var(--sbb-datepicker-calendar-background-color);
     border: var(--sbb-border-width) solid transparent;
     border-right-color: var(--sbb-color-weak-accent);
     border-bottom-color: var(--sbb-color-weak-accent);
