--- a/src/angular/sidebar/sidebar/sidebar.scss
+++ b/src/angular/sidebar/sidebar/sidebar.scss
@@ -73,7 +73,7 @@
   bottom: 0;
   width: calc(#{sbb.pxToRem(300)} * var(--sbb-scaling-factor));
   transform: translate3d(-100%, 0, 0);
-  border-right: var(--sbb-border-width-thin) solid var(--sbb-color-cloud);
+  border-right: var(--sbb-border-width-thin) solid var(--sbb-sidebar-border-right-color);
   background-color: var(--sbb-sidebar-background-color);
 
   // Usually the `visibility: hidden` added by the animation is enough to prevent focus from
@@ -118,9 +118,15 @@
     --sbb-divider-medium: var(--sbb-divider-small);
   }
 
-  .sbb-expansion-panel-header {
+  :is(
+      .sbb-expansion-panel-header,
+      .sbb-expansion-panel-header:is(.sbb-expanded, .sbb-expanded:is(:focus, :hover)),
+      .sbb-expansion-panel-body
+    ) {
     background-color: inherit;
+  }
 
+  .sbb-expansion-panel-header {
     /**
      Animate line below legend when collapsing.
      Base styles are copied from .sbb-expansion-panel-header
@@ -251,6 +257,6 @@
 }
 
 .sbb-sidebar-mobile-menu-bar-close-wrapper {
-  background-color: var(--sbb-color-background);
+  background-color: var(--sbb-sidebar-background-color);
   z-index: 1;
 }
